--- a/intro/Makefile
+++ b/intro/Makefile
@@ -8,7 +8,7 @@ cpu: cpu.c common.h
 	gcc -o cpu cpu.c -Wall
 
 mem: mem.c common.h
-	gcc -o mem mem.c -Wall
+	gcc -o mem mem.c -Wall -fno-pie
 
 threads: threads.c common.h common_threads.h
 	gcc -o threads threads.c -Wall -pthread
